SOCPlayerTracker minor effic: all new Integer -> .valueOf; updateSettlementConflicts: enum -> foreach